frontend/test/should_fail/retype_006.grg
using retype_model_001;

// forbidden, because of ambiguous retyping statements

rule r {
	pattern {
		x:TYPE1;
	}
	replace {
		y:TYPE1<x>;
		z:TYPE2<x>;
	}
}

